Added "HighScoresActivity" to show the high scores

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_game_play">GamePlay</string>
     <string name="title_activity_advance_breakout">AdvanceBreakout</string>
+    <string name="title_activity_high_scores">HighScoresActivity</string>
 
 </resources>
