--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_game_play">GamePlay</string>
     <string name="title_activity_advance_breakout">AdvanceBreakout</string>
     <string name="title_activity_high_scores">HighScoresActivity</string>
+    <string name="title_activity_win">WinActivity</string>
 
 </resources>
