Added activity to create a board

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_advance_breakout">AdvanceBreakout</string>
     <string name="title_activity_high_scores">HighScoresActivity</string>
     <string name="title_activity_win">WinActivity</string>
+    <string name="title_activity_create_board">CreateBoardActivity</string>
 
 </resources>
