I pushed my balls for a distant location

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="title_activity_high_scores">HighScoresActivity</string>
     <string name="title_activity_win">WinActivity</string>
     <string name="title_activity_create_board">CreateBoardActivity</string>
+    <string name="title_activity_lose">LoseActivity</string>
 
 </resources>
